Fix low contrast color on form input text

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -70,7 +70,7 @@ textarea {
 
 input::placeholder,
 textarea::placeholder {
-    color: rgb(230, 100, 100);
+    color: rgb(248, 248, 248);
 }
 
 form input,
@@ -84,7 +84,12 @@ form button {
 textarea,
 input,
 select {
-    background-color: rgb(26, 26, 26);
+    background-color: rgb(36, 36, 36);
+}
+
+#addProjectPriority,
+#addNotePriority {
+    color: white;
 }
 
 #addNoteButton,
